Fixed #22940 Names of fields don't align to left side in case if item doesn't return picture

--- a/app/assets/stylesheets/vendor_overrides.scss
+++ b/app/assets/stylesheets/vendor_overrides.scss
@@ -56,3 +56,7 @@ form {
 .dot .mapCluster {
   text-align: center;
 }
+
+.FeatureContent .table {
+  padding-left: 0;
+}
